...
                        Spacer()
                        Picker("Update every", selection: menuSetting(
                            get: { $0.interval },
                            set: { $0.interval = $1 }
                        )) {
                            Text("1 second").tag(1.0)
                            Text("2 seconds").tag(2.0)
                            Text("3 seconds").tag(3.0)
                            Text("5 seconds").tag(5.0)
                        }
                        .labelsHidden()
                        .pickerStyle(.menu)
                        .frame(width: 160, alignment: .leading)
                    }
                }
...
